force-app/main/default/objects/Candidate1__c/Candidate1__c.object-meta.xml
<CustomObject>
    <label>Candidate1</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates 1</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>