force-app/main/default/objects/Candidate1__c/fields/Skill_set__c.field-meta.xml
<CustomField>
    <fullName>Skill_set__c</fullName>
    <label>Skill set</label>
    <type>TextArea</type>
</CustomField>