force-app/main/default/objects/Candidate1__c/fields/Zip_postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_postal_Code__c</fullName>
    <label>Zip/postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>