force-app/main/default/objects/Candidate1__c/validationRules/SSN_Formatted.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Formatted</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( SSN__c,&quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>SSN must be in this format: 999-99-9999.</errorMessage>
</ValidationRule>