force-app/main/default/objects/Candidate1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Education__c</columns>
    <columns>Years_of_Experience__c</columns>
    <columns>City__c</columns>
    <columns>State_Province__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>